[gd_scene load_steps=30 format=3 uid="uid://d4hmqtouiu3qi"]

[ext_resource type="Script" uid="uid://sskwaoewx6q0" path="res://Inventory/inv_ui.gd" id="1_ughb5"]
[ext_resource type="Texture2D" uid="uid://dw5r2dayj38p2" path="res://Assets/Menu_assets/frame.png" id="2_3klia"]
[ext_resource type="Texture2D" uid="uid://cig71lm7hhm6e" path="res://Assets/Menu_assets/character_frame.png" id="2_67srk"]
[ext_resource type="Texture2D" uid="uid://ciinxspg8if6o" path="res://Assets/Menu_assets/Soldier-Idle-menu.png" id="2_rqxd6"]
[ext_resource type="Texture2D" uid="uid://cu7wowh2548t2" path="res://Assets/Menu_assets/dmg.png" id="3_35ghd"]
[ext_resource type="Texture2D" uid="uid://c4kx7uuk01x77" path="res://Assets/Items/coin_spin-Sheet.png" id="3_ks0ad"]
[ext_resource type="Texture2D" uid="uid://cph2xij715g3n" path="res://Assets/Menu_assets/ats.png" id="4_epqjb"]
[ext_resource type="Texture2D" uid="uid://dul2c5rwo8giw" path="res://Assets/Menu_assets/hp.png" id="5_c68me"]
[ext_resource type="Texture2D" uid="uid://b3ateisudmq2n" path="res://Assets/Menu_assets/def.png" id="6_ig2n5"]
[ext_resource type="PackedScene" uid="uid://ixbrp0fri5jl" path="res://Inventory/inv_slot.tscn" id="7_35ghd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ks0ad"]
atlas = ExtResource("2_rqxd6")
region = Rect2(0, 0, 17, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoah3"]
atlas = ExtResource("2_rqxd6")
region = Rect2(17, 0, 17, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgfsv"]
atlas = ExtResource("2_rqxd6")
region = Rect2(34, 0, 17, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjy1c"]
atlas = ExtResource("2_rqxd6")
region = Rect2(51, 0, 17, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8h8o"]
atlas = ExtResource("2_rqxd6")
region = Rect2(68, 0, 17, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwmn1"]
atlas = ExtResource("2_rqxd6")
region = Rect2(85, 0, 17, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_i0ny4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks0ad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoah3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgfsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjy1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8h8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwmn1")
}],
"loop": true,
"name": &"character",
"speed": 5.0
}]

[sub_resource type="GDScript" id="GDScript_qoah3"]
script/source = "extends AnimatedSprite2D

	
"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_rqxd6"]
load_path = "res://.godot/imported/coin_frame.png-6ad7dd7e0ad9f9ec6feeecb894fc4471.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_i0ny4"]
atlas = ExtResource("3_ks0ad")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rb27p"]
atlas = ExtResource("3_ks0ad")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jt5uf"]
atlas = ExtResource("3_ks0ad")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_w56vc"]
atlas = ExtResource("3_ks0ad")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2f3g"]
atlas = ExtResource("3_ks0ad")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g663b"]
atlas = ExtResource("3_ks0ad")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_eli2t"]
atlas = ExtResource("3_ks0ad")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ng4bd"]
atlas = ExtResource("3_ks0ad")
region = Rect2(560, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_0s2v8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0ny4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rb27p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jt5uf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w56vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2f3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g663b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eli2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ng4bd")
}],
"loop": true,
"name": &"coin",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_k4euo"]
font_size = 11

[node name="InvUi" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ughb5")

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 24.0
offset_right = 193.0
offset_bottom = 55.0
text = "X"

[node name="Character2" type="AnimatedSprite2D" parent="."]
z_index = 2
position = Vector2(319, 134)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_i0ny4")
animation = &"character"
script = SubResource("GDScript_qoah3")

[node name="Coins" type="NinePatchRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = 443.0
offset_top = 210.0
offset_right = 509.0
offset_bottom = 232.0
scale = Vector2(2, 2)
size_flags_horizontal = 6
texture = SubResource("CompressedTexture2D_rqxd6")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="coin_amount" type="Label" parent="Coins"]
layout_mode = 0
offset_left = 19.0
offset_top = -1.0
offset_right = 63.0
offset_bottom = 24.0
text = "8888"
horizontal_alignment = 2

[node name="Coin" type="AnimatedSprite2D" parent="Coins"]
position = Vector2(10.5, 11)
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_0s2v8")
animation = &"coin"

[node name="Character" type="NinePatchRect" parent="."]
z_index = 1
layout_mode = 2
offset_left = 261.0
offset_top = 64.0
offset_right = 270.0
offset_bottom = 205.0
scale = Vector2(13, 1)
size_flags_horizontal = 6
texture = ExtResource("2_67srk")
region_rect = Rect2(0, 0, 32, 32)

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.312
anchor_top = 0.067
anchor_right = 0.686
anchor_bottom = 0.92
offset_left = 0.319992
offset_top = -0.120001
offset_right = -63.04
offset_bottom = -66.2
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.36, 1.2959)
texture = ExtResource("2_3klia")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Stats" type="HBoxContainer" parent="NinePatchRect"]
z_index = 3
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 171.0
offset_bottom = 31.0
theme_override_constants/separation = 1
alignment = 1

[node name="Dmg" type="TextureRect" parent="NinePatchRect/Stats"]
layout_mode = 2
texture = ExtResource("3_35ghd")
stretch_mode = 2

[node name="Dmg_val" type="Label" parent="NinePatchRect/Stats"]
unique_name_in_owner = true
layout_mode = 2
text = "600"
label_settings = SubResource("LabelSettings_k4euo")

[node name="Ats" type="TextureRect" parent="NinePatchRect/Stats"]
layout_mode = 2
texture = ExtResource("4_epqjb")
stretch_mode = 2

[node name="Ats_val" type="Label" parent="NinePatchRect/Stats"]
unique_name_in_owner = true
layout_mode = 2
text = "12"
label_settings = SubResource("LabelSettings_k4euo")

[node name="Hp" type="TextureRect" parent="NinePatchRect/Stats"]
layout_mode = 2
texture = ExtResource("5_c68me")
stretch_mode = 2

[node name="Hp_val" type="Label" parent="NinePatchRect/Stats"]
unique_name_in_owner = true
layout_mode = 2
text = "200/200"
label_settings = SubResource("LabelSettings_k4euo")

[node name="Def" type="TextureRect" parent="NinePatchRect/Stats"]
layout_mode = 2
texture = ExtResource("6_ig2n5")
stretch_mode = 2

[node name="Def_val" type="Label" parent="NinePatchRect/Stats"]
unique_name_in_owner = true
layout_mode = 2
text = "30"
label_settings = SubResource("LabelSettings_k4euo")

[node name="Equipment" type="HBoxContainer" parent="NinePatchRect"]
z_index = 3
layout_mode = 0
offset_left = 17.6471
offset_top = 30.8666
offset_right = 158.647
offset_bottom = 138.867

[node name="Armour" type="VBoxContainer" parent="NinePatchRect/Equipment"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="NinePatchRect/Equipment/Armour"]
layout_mode = 2

[node name="Helmet" parent="NinePatchRect/Equipment/Armour/GridContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="Chestplate" parent="NinePatchRect/Equipment/Armour/GridContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="Leggings" parent="NinePatchRect/Equipment/Armour/GridContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="Boots" parent="NinePatchRect/Equipment/Armour/GridContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="Accessories" type="VBoxContainer" parent="NinePatchRect/Equipment"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Necklace" parent="NinePatchRect/Equipment/Accessories" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="Ring" parent="NinePatchRect/Equipment/Accessories" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="Bracelet" parent="NinePatchRect/Equipment/Accessories" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="Belt" parent="NinePatchRect/Equipment/Accessories" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="Inv" type="ScrollContainer" parent="NinePatchRect"]
z_index = 3
layout_mode = 0
offset_left = 6.0
offset_top = 148.0
offset_right = 277.0
offset_bottom = 235.0
vertical_scroll_mode = 3

[node name="InvContainer" type="GridContainer" parent="NinePatchRect/Inv"]
z_index = 2
layout_mode = 2
columns = 6

[node name="inv_slot" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot2" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot3" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot4" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot5" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot6" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot7" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot8" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot9" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot10" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot11" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot12" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot13" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot14" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot15" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot16" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot17" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot18" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot19" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot20" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot21" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot22" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot23" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot24" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot25" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot26" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot27" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot28" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot29" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="inv_slot30" parent="NinePatchRect/Inv/InvContainer" instance=ExtResource("7_35ghd")]
layout_mode = 2

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 443.0
offset_top = 259.0
offset_right = 502.0
offset_bottom = 283.0
text = "Sell"

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
